--- a/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
+++ b/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,6 +10,15 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+
+    <script type="text/javascript" src="blazor.extensions.storage.js"></script>
+
+    <script src="_content/Fluxor.Blazor.Web/scripts/index.js"></script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+
+    <script src="_content/BlazorPro.BlazorSize/blazorSize.min.js"></script>
+
 </head>
 
 <body>
