Error side translated to hungary

--- a/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
+++ b/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
@@ -22,11 +22,11 @@
 </head>
 
 <body>
-    <app>Loading...</app>
+    <app></app>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        Váratlan hiba lépett fel.
+        <a href="" class="reload">Újratöltés</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
