spinner added when the application loading in

--- a/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
+++ b/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <app></app>
+    <app><div class="spinner"></div></app>
 
     <div id="blazor-error-ui">
         Váratlan hiba lépett fel.
