Spinner added when initalizing page

--- a/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
+++ b/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Blazor.WASM</title>
+    <title>KriszW Software | Fejlesztés, üzemeltetés és szoftvertanácsadás</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
@@ -23,11 +23,15 @@
 </head>
 
 <body>
-    <app><div class="spinner"></div></app>
+    <app>
+        <div class="spinner-container">
+            <div class="spinner"></div>
+        </div>
+    </app>
 
     <div id="blazor-error-ui">
-        Váratlan hiba lépett fel.
-        <a href="" class="reload">Újratöltés</a>
+        Unexpected error occurred. Please reload the page
+        <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
