--- a/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
+++ b/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
@@ -17,9 +17,7 @@
     <script src="_content/Fluxor.Blazor.Web/scripts/index.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
-
-    <script src="_content/BlazorPro.BlazorSize/blazorSize.min.js"></script>
-
+    <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />
 </head>
 
 <body>
