--- a/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
+++ b/src/WebAPPs/SPA/Blazor.WASM/wwwroot/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 
     <script type="text/javascript" src="blazor.extensions.storage.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?always=1&refreshPage=1"></script>
 
     <script src="_content/Fluxor.Blazor.Web/scripts/index.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
